# next-dhcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/config/: __init__.py  database.py  dhcp.py
src/core/: __init__.py  dhcp.py  exceptions.py
