[project]
name = "next-dhcp"
version = "0.1.0.0"
description = "WIP"
authors = [
    {name = "SantaSpeen",email = "santaspeen@gmail.com"}
]
license = {text = "FPA License"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []
dynamic = [ "classifiers" ]

[project.urls]
repository = "https://github.com/SantaSpeen/next-dhcp"

[tool.poetry]
package-mode = false
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
